qt6/multimedia/gen_qcamera.h

class QCamera;
class QCameraDevice;
class QCameraFormat;
class QMediaCaptureSession;
class QMetaObject;
class QObject;
class QPointF;
typedef struct QCamera QCamera;
typedef struct QCameraDevice QCameraDevice;
typedef struct QCameraFormat QCameraFormat;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMediaCaptureSession QMediaCaptureSession;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPointF QPointF;
typedef struct QTimerEvent QTimerEvent;
void QCamera_connect_brightnessChanged(QCamera* self, intptr_t slot);
void QCamera_contrastChanged(QCamera* self);
void QCamera_connect_contrastChanged(QCamera* self, intptr_t slot);
void QCamera_saturationChanged(QCamera* self);
void QCamera_connect_saturationChanged(QCamera* self, intptr_t slot);
void QCamera_hueChanged(QCamera* self);
void QCamera_connect_hueChanged(QCamera* self, intptr_t slot);
struct miqt_string QCamera_tr2(const char* s, const char* c);
struct miqt_string QCamera_tr3(const char* s, const char* c, int n);
bool QCamera_override_virtual_metacall(void* self, intptr_t slot);
int QCamera_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QCamera_override_virtual_event(void* self, intptr_t slot);
bool QCamera_virtualbase_event(void* self, QEvent* event);
bool QCamera_override_virtual_eventFilter(void* self, intptr_t slot);
bool QCamera_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QCamera_override_virtual_timerEvent(void* self, intptr_t slot);
void QCamera_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QCamera_override_virtual_childEvent(void* self, intptr_t slot);
void QCamera_virtualbase_childEvent(void* self, QChildEvent* event);
bool QCamera_override_virtual_customEvent(void* self, intptr_t slot);
void QCamera_virtualbase_customEvent(void* self, QEvent* event);
bool QCamera_override_virtual_connectNotify(void* self, intptr_t slot);
void QCamera_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QCamera_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QCamera_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QCamera_delete(QCamera* self);