qt6/multimedia/gen_qcamera.nim

proc fQCamera_connect_brightnessChanged(self: pointer, slot: int) {.importc: "QCamera_connect_brightnessChanged".}
proc fcQCamera_contrastChanged(self: pointer, ): void {.importc: "QCamera_contrastChanged".}
proc fQCamera_connect_contrastChanged(self: pointer, slot: int) {.importc: "QCamera_connect_contrastChanged".}
proc fcQCamera_saturationChanged(self: pointer, ): void {.importc: "QCamera_saturationChanged".}
proc fQCamera_connect_saturationChanged(self: pointer, slot: int) {.importc: "QCamera_connect_saturationChanged".}
proc fcQCamera_hueChanged(self: pointer, ): void {.importc: "QCamera_hueChanged".}
proc fQCamera_connect_hueChanged(self: pointer, slot: int) {.importc: "QCamera_connect_hueChanged".}
proc fcQCamera_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCamera_tr2".}
proc fcQCamera_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCamera_tr3".}
proc fQCamera_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QCamera_virtualbase_metacall".}
proc fcQCamera_override_virtual_metacall(self: pointer, slot: int) {.importc: "QCamera_override_virtual_metacall".}
proc fQCamera_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QCamera_virtualbase_event".}
proc fcQCamera_override_virtual_event(self: pointer, slot: int) {.importc: "QCamera_override_virtual_event".}
proc fQCamera_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QCamera_virtualbase_eventFilter".}
proc fcQCamera_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QCamera_override_virtual_eventFilter".}
proc fQCamera_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_timerEvent".}
proc fcQCamera_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_timerEvent".}
proc fQCamera_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_childEvent".}
proc fcQCamera_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_childEvent".}
proc fQCamera_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_customEvent".}
proc fcQCamera_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_customEvent".}
proc fQCamera_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QCamera_virtualbase_connectNotify".}
proc fcQCamera_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QCamera_override_virtual_connectNotify".}
proc fQCamera_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QCamera_virtualbase_disconnectNotify".}
proc fcQCamera_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QCamera_override_virtual_disconnectNotify".}
proc fcQCamera_delete(self: pointer) {.importc: "QCamera_delete".}


func init*(T: type QCamera, h: ptr cQCamera): QCamera =
  T(h: h)
proc create*(T: type QCamera, ): QCamera =

  QCamera.init(fcQCamera_new())
proc create*(T: type QCamera, cameraDevice: gen_qcameradevice.QCameraDevice): QCamera =

  QCamera.init(fcQCamera_new2(cameraDevice.h))
proc create*(T: type QCamera, position: gen_qcameradevice.QCameraDevicePosition): QCamera =

  QCamera.init(fcQCamera_new3(cint(position)))
proc create2*(T: type QCamera, parent: gen_qobject.QObject): QCamera =

  QCamera.init(fcQCamera_new4(parent.h))
proc create*(T: type QCamera, cameraDevice: gen_qcameradevice.QCameraDevice, parent: gen_qobject.QObject): QCamera =

  QCamera.init(fcQCamera_new5(cameraDevice.h, parent.h))
proc create*(T: type QCamera, position: gen_qcameradevice.QCameraDevicePosition, parent: gen_qobject.QObject): QCamera =

  QCamera.init(fcQCamera_new6(cint(position), parent.h))
proc metaObject*(self: QCamera, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQCamera_metaObject(self.h))

proc metacast*(self: QCamera, param1: cstring): pointer =

  fcQCamera_metacast(self.h, param1)

proc metacall*(self: QCamera, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQCamera_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QCamera, s: cstring): string =

  let v_ms = fcQCamera_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isAvailable*(self: QCamera, ): bool =

  fcQCamera_isAvailable(self.h)

proc isActive*(self: QCamera, ): bool =

  fcQCamera_isActive(self.h)

proc captureSession*(self: QCamera, ): gen_qmediacapturesession.QMediaCaptureSession =

  gen_qmediacapturesession.QMediaCaptureSession(h: fcQCamera_captureSession(self.h))

proc cameraDevice*(self: QCamera, ): gen_qcameradevice.QCameraDevice =

  gen_qcameradevice.QCameraDevice(h: fcQCamera_cameraDevice(self.h))

proc setCameraDevice*(self: QCamera, cameraDevice: gen_qcameradevice.QCameraDevice): void =

  fcQCamera_setCameraDevice(self.h, cameraDevice.h)

proc cameraFormat*(self: QCamera, ): gen_qcameradevice.QCameraFormat =

  gen_qcameradevice.QCameraFormat(h: fcQCamera_cameraFormat(self.h))

proc setCameraFormat*(self: QCamera, format: gen_qcameradevice.QCameraFormat): void =

  fcQCamera_setCameraFormat(self.h, format.h)

proc error*(self: QCamera, ): QCameraError =

  QCameraError(fcQCamera_error(self.h))

proc errorString*(self: QCamera, ): string =

  let v_ms = fcQCamera_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc supportedFeatures*(self: QCamera, ): QCameraFeature =

  QCameraFeature(fcQCamera_supportedFeatures(self.h))

proc focusMode*(self: QCamera, ): QCameraFocusMode =

  QCameraFocusMode(fcQCamera_focusMode(self.h))

proc setFocusMode*(self: QCamera, mode: QCameraFocusMode): void =

  fcQCamera_setFocusMode(self.h, cint(mode))

proc isFocusModeSupported*(self: QCamera, mode: QCameraFocusMode): bool =

  fcQCamera_isFocusModeSupported(self.h, cint(mode))

proc focusPoint*(self: QCamera, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQCamera_focusPoint(self.h))

proc customFocusPoint*(self: QCamera, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQCamera_customFocusPoint(self.h))

proc setCustomFocusPoint*(self: QCamera, point: gen_qpoint.QPointF): void =

  fcQCamera_setCustomFocusPoint(self.h, point.h)

proc setFocusDistance*(self: QCamera, d: float32): void =

  fcQCamera_setFocusDistance(self.h, d)

proc focusDistance*(self: QCamera, ): float32 =

  fcQCamera_focusDistance(self.h)

proc minimumZoomFactor*(self: QCamera, ): float32 =

  fcQCamera_minimumZoomFactor(self.h)

proc maximumZoomFactor*(self: QCamera, ): float32 =

  fcQCamera_maximumZoomFactor(self.h)

proc zoomFactor*(self: QCamera, ): float32 =

  fcQCamera_zoomFactor(self.h)

proc setZoomFactor*(self: QCamera, factor: float32): void =

  fcQCamera_setZoomFactor(self.h, factor)

proc flashMode*(self: QCamera, ): QCameraFlashMode =

  QCameraFlashMode(fcQCamera_flashMode(self.h))

proc isFlashModeSupported*(self: QCamera, mode: QCameraFlashMode): bool =

  fcQCamera_isFlashModeSupported(self.h, cint(mode))

proc isFlashReady*(self: QCamera, ): bool =

  fcQCamera_isFlashReady(self.h)

proc torchMode*(self: QCamera, ): QCameraTorchMode =

  QCameraTorchMode(fcQCamera_torchMode(self.h))

proc isTorchModeSupported*(self: QCamera, mode: QCameraTorchMode): bool =

  fcQCamera_isTorchModeSupported(self.h, cint(mode))

proc exposureMode*(self: QCamera, ): QCameraExposureMode =

  QCameraExposureMode(fcQCamera_exposureMode(self.h))

proc isExposureModeSupported*(self: QCamera, mode: QCameraExposureMode): bool =

  fcQCamera_isExposureModeSupported(self.h, cint(mode))

proc exposureCompensation*(self: QCamera, ): float32 =

  fcQCamera_exposureCompensation(self.h)

proc isoSensitivity*(self: QCamera, ): cint =

  fcQCamera_isoSensitivity(self.h)

proc manualIsoSensitivity*(self: QCamera, ): cint =

  fcQCamera_manualIsoSensitivity(self.h)

proc exposureTime*(self: QCamera, ): float32 =

  fcQCamera_exposureTime(self.h)

proc manualExposureTime*(self: QCamera, ): float32 =

  fcQCamera_manualExposureTime(self.h)

proc minimumIsoSensitivity*(self: QCamera, ): cint =

  fcQCamera_minimumIsoSensitivity(self.h)

proc maximumIsoSensitivity*(self: QCamera, ): cint =

  fcQCamera_maximumIsoSensitivity(self.h)

proc minimumExposureTime*(self: QCamera, ): float32 =

  fcQCamera_minimumExposureTime(self.h)

proc maximumExposureTime*(self: QCamera, ): float32 =

  fcQCamera_maximumExposureTime(self.h)

proc whiteBalanceMode*(self: QCamera, ): QCameraWhiteBalanceMode =

  QCameraWhiteBalanceMode(fcQCamera_whiteBalanceMode(self.h))

proc isWhiteBalanceModeSupported*(self: QCamera, mode: QCameraWhiteBalanceMode): bool =

  fcQCamera_isWhiteBalanceModeSupported(self.h, cint(mode))

proc colorTemperature*(self: QCamera, ): cint =

  fcQCamera_colorTemperature(self.h)

proc setActive*(self: QCamera, active: bool): void =

  fcQCamera_setActive(self.h, active)

proc start*(self: QCamera, ): void =

  fcQCamera_start(self.h)

proc stop*(self: QCamera, ): void =

  fcQCamera_stop(self.h)

proc zoomTo*(self: QCamera, zoom: float32, rate: float32): void =

  fcQCamera_zoomTo(self.h, zoom, rate)

proc setFlashMode*(self: QCamera, mode: QCameraFlashMode): void =

  fcQCamera_setFlashMode(self.h, cint(mode))

proc setTorchMode*(self: QCamera, mode: QCameraTorchMode): void =

  fcQCamera_setTorchMode(self.h, cint(mode))

proc setExposureMode*(self: QCamera, mode: QCameraExposureMode): void =

  fcQCamera_setExposureMode(self.h, cint(mode))

proc setExposureCompensation*(self: QCamera, ev: float32): void =

  fcQCamera_setExposureCompensation(self.h, ev)

proc setManualIsoSensitivity*(self: QCamera, iso: cint): void =

  fcQCamera_setManualIsoSensitivity(self.h, iso)

proc setAutoIsoSensitivity*(self: QCamera, ): void =

  fcQCamera_setAutoIsoSensitivity(self.h)

proc setManualExposureTime*(self: QCamera, seconds: float32): void =

  fcQCamera_setManualExposureTime(self.h, seconds)

proc setAutoExposureTime*(self: QCamera, ): void =

  fcQCamera_setAutoExposureTime(self.h)

proc setWhiteBalanceMode*(self: QCamera, mode: QCameraWhiteBalanceMode): void =

  fcQCamera_setWhiteBalanceMode(self.h, cint(mode))

proc setColorTemperature*(self: QCamera, colorTemperature: cint): void =

  fcQCamera_setColorTemperature(self.h, colorTemperature)

proc activeChanged*(self: QCamera, param1: bool): void =

  fcQCamera_activeChanged(self.h, param1)

proc miqt_exec_callback_QCamera_activeChanged(slot: int, param1: bool) {.exportc.} =
  type Cb = proc(param1: bool)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = param1


  nimfunc[](slotval1)

proc onactiveChanged*(self: QCamera, slot: proc(param1: bool)) =
  type Cb = proc(param1: bool)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQCamera_connect_activeChanged(self.h, cast[int](addr tmp[]))
proc errorChanged*(self: QCamera, ): void =

  fcQCamera_errorChanged(self.h)

proc miqt_exec_callback_QCamera_errorChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onerrorChanged*(self: QCamera, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQCamera_connect_errorChanged(self.h, cast[int](addr tmp[]))
proc errorOccurred*(self: QCamera, error: QCameraError, errorString: string): void =

  fcQCamera_errorOccurred(self.h, cint(error), struct_miqt_string(data: errorString, len: csize_t(len(errorString))))

proc miqt_exec_callback_QCamera_errorOccurred(slot: int, error: cint, errorString: struct_miqt_string) {.exportc.} =
  type Cb = proc(error: QCameraError, errorString: string)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = QCameraError(error)
